--- a/commerce_shipping.permissions.yml
+++ b/commerce_shipping.permissions.yml
@@ -2,6 +2,10 @@ administer commerce_shipping_method:
   title: 'Administer shipping methods'
   'restrict access': TRUE
 
+administer commerce_shipment:
+  title: 'Administer shipments'
+  'restrict access': TRUE
+
 administer commerce_package_type:
   title: 'Administer package types'
   'restrict access': TRUE
