--- a/commerce_shipping.links.menu.yml
+++ b/commerce_shipping.links.menu.yml
@@ -9,3 +9,9 @@ entity.commerce_package_type.collection:
   route_name: entity.commerce_package_type.collection
   parent: 'commerce.configuration'
   description: 'Manage you package types'
+
+entity.commerce_shipment.settings:
+  title: 'Shipment settings'
+  route_name: 'entity.commerce_shipment.settings'
+  parent: 'commerce.configuration'
+  description: 'Configure shipments.'
