--- a/commerce_shipping.services.yml
+++ b/commerce_shipping.services.yml
@@ -1,4 +1,14 @@
 services:
+  commerce_shipping.packer_manager:
+    class: Drupal\commerce_shipping\PackerManager
+    tags:
+      - { name: service_collector, call: addPacker, tag: commerce_shipping.packer }
+
+  commerce_shipping.default_packer:
+    class: Drupal\commerce_shipping\Packer\DefaultPacker
+    tags:
+      - { name: commerce_shipping.packer, priority: -100 }
+
   commerce_shipping.referenceable_plugin_types_subscriber:
     class: Drupal\commerce_shipping\EventSubscriber\ReferenceablePluginTypesSubscriber
     tags:
