--- a/commerce_shipping.info.yml
+++ b/commerce_shipping.info.yml
@@ -9,3 +9,7 @@ dependencies:
   - commerce_order
   - commerce_price
   - physical
+config_devel:
+  install:
+    - core.entity_view_display.commerce_shipment.commerce_shipment.user
+    - core.entity_view_mode.commerce_shipment.user
