--- a/commerce_shipping.links.menu.yml
+++ b/commerce_shipping.links.menu.yml
@@ -1,3 +1,9 @@
+entity.commerce_shipment_type.collection:
+  title: 'Shipment types'
+  route_name: entity.commerce_shipment_type.collection
+  parent: 'commerce.configuration'
+  description: 'Manage you shipment types'
+
 entity.commerce_shipping_method.collection:
   title: 'Shipping methods'
   route_name: 'entity.commerce_shipping_method.collection'
@@ -9,9 +15,3 @@ entity.commerce_package_type.collection:
   route_name: entity.commerce_package_type.collection
   parent: 'commerce.configuration'
   description: 'Manage you package types'
-
-entity.commerce_shipment.settings:
-  title: 'Shipment settings'
-  route_name: 'entity.commerce_shipment.settings'
-  parent: 'commerce.configuration'
-  description: 'Configure shipments.'
