--- a/commerce_shipping.links.task.yml
+++ b/commerce_shipping.links.task.yml
@@ -1,7 +1,7 @@
-entity.commerce_shipment.settings:
-  route_name: entity.commerce_shipment.settings
-  title: 'Settings'
-  base_route: entity.commerce_shipment.settings
+entity.commerce_shipment_type.edit_form:
+  route_name: entity.commerce_shipment_type.edit_form
+  base_route: entity.commerce_shipment_type.edit_form
+  title: Edit
 
 entity.commerce_shipping_method.edit_form:
   route_name: entity.commerce_shipping_method.edit_form
