--- a/commerce_shipping.permissions.yml
+++ b/commerce_shipping.permissions.yml
@@ -6,6 +6,10 @@ administer commerce_shipment:
   title: 'Administer shipments'
   'restrict access': TRUE
 
+administer commerce_shipment_type:
+  title: 'Administer shipment types'
+  'restrict access': TRUE
+
 administer commerce_package_type:
   title: 'Administer package types'
   'restrict access': TRUE
