Issue #2849777: Create OrderProcessor to apply shipping cost adjustments to the order

--- a/commerce_shipping.services.yml
+++ b/commerce_shipping.services.yml
@@ -10,6 +10,11 @@ services:
     tags:
       - { name: commerce_shipping.packer, priority: -100 }
 
+  commerce_shipping.shipment_order_processor:
+    class: Drupal\commerce_shipping\ShipmentOrderProcessor
+    tags:
+      - { name: commerce_order.order_processor, priority: 200 }
+
   commerce_shipping.referenceable_plugin_types_subscriber:
     class: Drupal\commerce_shipping\EventSubscriber\ReferenceablePluginTypesSubscriber
     tags:
