--- a/commerce_shipping.services.yml
+++ b/commerce_shipping.services.yml
@@ -10,6 +10,10 @@ services:
     tags:
       - { name: commerce_shipping.packer, priority: -100 }
 
+  commerce_shipping.order_shipment_summary:
+    class: Drupal\commerce_shipping\OrderShipmentSummary
+    arguments: ['@entity_type.manager']
+
   commerce_shipping.shipment_order_processor:
     class: Drupal\commerce_shipping\ShipmentOrderProcessor
     tags:
