--- a/commerce_shipping.info.yml
+++ b/commerce_shipping.info.yml
@@ -13,4 +13,5 @@ config_devel:
   install:
     - core.entity_view_display.commerce_shipment.default.user
     - core.entity_view_mode.commerce_shipment.user
+    - commerce_checkout.commerce_checkout_flow.shipping
     - commerce_shipping.commerce_shipment.default
