--- a/commerce_shipping.services.yml
+++ b/commerce_shipping.services.yml
@@ -1,6 +1,7 @@
 services:
   commerce_shipping.packer_manager:
     class: Drupal\commerce_shipping\PackerManager
+    arguments: ['@entity_type.manager']
     tags:
       - { name: service_collector, call: addPacker, tag: commerce_shipping.packer }
 
@@ -16,6 +17,7 @@ services:
 
   commerce_shipping.shipment_order_processor:
     class: Drupal\commerce_shipping\ShipmentOrderProcessor
+    arguments: ['@entity_type.manager', '@commerce_shipping.packer_manager']
     tags:
       - { name: commerce_order.order_processor, priority: 200 }
 
