--- a/config/optional/commerce_checkout.commerce_checkout_flow.shipping.yml
+++ b/config/optional/commerce_checkout.commerce_checkout_flow.shipping.yml
@@ -8,25 +8,27 @@ label: Shipping
 plugin: multistep_default
 configuration:
   display_checkout_progress: true
-  order_summary_view: commerce_checkout_order_summary
   panes:
-    completion_message:
-      message: 'Your order number is %order_number. You can view your order on your account page when logged in.'
-      step: complete
-      weight: 6
-    contact_information:
-      double_entry: false
-      step: order_information
-      weight: 1
     login:
       allow_guest_checkout: true
       allow_registration: false
       step: login
       weight: 0
-    review:
-      step: review
-      weight: 4
+    contact_information:
+      double_entry: false
+      step: order_information
+      weight: 1
     shipping_information:
       require_shipping_profile: true
       step: order_information
       weight: 2
+    review:
+      step: review
+      weight: 3
+    completion_message:
+      step: complete
+      weight: 4
+    order_summary:
+      view: commerce_checkout_order_summary
+      step: _sidebar
+      weight: 5
