--- a/commerce_shipping.info.yml
+++ b/commerce_shipping.info.yml
@@ -6,8 +6,8 @@ core: 8.x
 configure: commerce_shipping.admin_overview
 dependencies:
   - commerce
-  - commerce_order
-  - commerce_price
+  - commerce:commerce_order
+  - commerce:commerce_price
   - physical
 config_devel:
   install:
