Issue #2891985 by bojanz: Update for Commerce 2.0-RC1

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "homepage": "http://drupal.org/project/commerce_shipping",
     "license": "GPL-2.0+",
     "require": {
-        "drupal/commerce": "2.x-dev"
+        "drupal/commerce": "~2.0",
+        "drupal/physical": "~1.0"
     },
     "minimum-stability": "dev"
 }
