--- a/commerce_shipping.info.yml
+++ b/commerce_shipping.info.yml
@@ -1,7 +1,7 @@
 name: Shipping
 type: module
 description: 'Provides core shipping functionality.'
-package: Commerce (shipping)
+package: Commerce (contrib)
 core: 8.x
 configure: commerce_shipping.admin_overview
 dependencies:
