--- a/commerce_shipping.routing.yml
+++ b/commerce_shipping.routing.yml
@@ -1,10 +1,18 @@
-entity.commerce_shipment_type.collection:
-  path: '/admin/commerce/config/shipment-types'
+commerce_shipping.configuration:
+  path: '/admin/commerce/config/shipping'
   defaults:
-    _entity_list: 'commerce_shipment_type'
-    _title: 'Shipment types'
+    _controller: '\Drupal\system\Controller\SystemController::systemAdminMenuBlockPage'
+    _title: 'Shipping'
   requirements:
-    _permission: 'administer commerce_shipment_type'
+    _permission: 'access commerce administration pages'
+
+entity.commerce_package_type.collection:
+  path: '/admin/commerce/config/package-types'
+  defaults:
+    _entity_list: 'commerce_package_type'
+    _title: 'Package types'
+  requirements:
+    _permission: 'administer commerce_package_type'
 
 entity.commerce_shipping_method.collection:
   path: '/admin/commerce/config/shipping-methods'
@@ -14,10 +22,10 @@ entity.commerce_shipping_method.collection:
   requirements:
     _permission: 'administer commerce_shipping_method'
 
-entity.commerce_package_type.collection:
-  path: '/admin/commerce/config/package-types'
+entity.commerce_shipment_type.collection:
+  path: '/admin/commerce/config/shipment-types'
   defaults:
-    _entity_list: 'commerce_package_type'
-    _title: 'Package types'
+    _entity_list: 'commerce_shipment_type'
+    _title: 'Shipment types'
   requirements:
-    _permission: 'administer commerce_package_type'
+    _permission: 'administer commerce_shipment_type'
