--- a/tests/modules/commerce_shipping_test/commerce_shipping_test.services.yml
+++ b/tests/modules/commerce_shipping_test/commerce_shipping_test.services.yml
@@ -3,3 +3,8 @@ services:
     class: Drupal\commerce_shipping_test\Packer\TestPacker
     tags:
       - { name: commerce_shipping.packer }
+  commerce_shipping_test.filter_shipping_methods_subscriber:
+    class: Drupal\commerce_shipping_test\EventSubscriber\FilterShippingMethodsSubscriber
+    tags:
+      - { name: event_subscriber }
+
